2008-08-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: More i18n. Do the login dialog and some others
	* msgs/en.msg:  using tk::AmpWidget which is present in 8.4 
	* msgs/de.msg: (missing has no alt key support for ttk in <8.5)

2008-08-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Provide a version of tk::AmpMenuArgs for Tk 8.4.

2008-08-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added msgs/ directory and started to internationalize
	the menu items and some other display text.
	* msgs/en.msg: english
	* msgs/de.msg: german

2008-08-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Improved normal message handling. Display in dialog,
	added per-user context menu for posting messages/memos.
	* tkchat.tcl: Updated error handling from MUC. Added some
	reconnection attempts in case we connect to the server before MUC
	is running after a server restart.

2008-07-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Ensure OnlineUsers has an entry for the current
	network to avoid an error for a null network.

2008-07-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Retrieve online updates to the set of bridge prefixes
	when checking the current version of tkchat.
	* tkchat_leo.tcl: Dont require a restart to enable from options.

2008-07-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:     Reworked the askleo package as a proper tkchat
	* tkchat_leo.tcl: plugin with options and a statusbar icon.
	* askleo/*:       Make use of ttk widgets.

2008-07-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Enable logging private chat to file (added option
	checkbox on options dialog). Added support for sending and
	responding to xmpp pings and fixed up the client discovery iq
	responses so we can delare feature support.

2008-06-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
